src/objects/Doctor_Mastery_Threshold__c.object
<CustomObject>
    <fields>
        <fullName>Distance_to_Associate__c</fullName>
        <label>Distance to Associate</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distance_to_Clinical_Director__c</fullName>
        <label>Distance to Clinical Director</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distance_to_Diplomate__c</fullName>
        <label>Distance to Diplomate</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distance_to_Fellow__c</fullName>
        <label>Distance to Fellow</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Threshold_Direction__c</fullName>
        <label>Threshold Direction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Doctor Mastery Threshold</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Year__c</columns>
        <columns>Distance_to_Associate__c</columns>
        <columns>Distance_to_Fellow__c</columns>
        <columns>Distance_to_Diplomate__c</columns>
        <columns>Distance_to_Clinical_Director__c</columns>
        <columns>Threshold_Direction__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Doctor Mastery Threshold Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Doctor Mastery Thresholds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>